# tech-fault-rag-bot

./: .gitignore  README.md  main.py  pyproject.toml  test_embeddings.py  test_openai.py
app/: config.py  main.py
app/ingestion/: chunker.py  embedder.py  pdf_loader.py
app/retrieval/: search.py  vector_store.py
app/services/: auth.py  history.py  qa.py
data/chroma_db/998af12c-4483-48b0-8461-48a02dee381f/: index_metadata.pickle
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
scripts/: ingest_docs.py  test_qa.py  test_search.py
ui/: streamlit_app.py
